libcm4all-was (1.1) unstable; urgency=low

  * simple: more consistent STOP handler

 --   

libcm4all-was (1.0) unstable; urgency=low

  * apreq: use libapreq2 forward-declarations
  * xios: reduce libcore header dependencies
  * simple: fix memory leak
  * simple: rename _input_read() to _read()
  * simple: _read() returns -1 on I/O error, -2 on other error
  * simple: add _output_poll()
  * simple: make file descriptors non-blocking
  * simple: check for control commands when I/O blocks
  * simple: support duplicate header names
  * simple: send PREMATURE packet if response body ends prematurely
  * apreq: don't use undefined parameter for apr_bucket_alloc()
  * apreq: fix multipart/form-data parser
  * convert to shared library
  * debian: Multi-Arch package

 -- Max Kellermann <mk@cm4all.com>  Fri, 15 May 2015 08:44:10 -0000

libcm4all-was (0.7) unstable; urgency=low

  * debian/control: improved clang build-dependency
  * simple: add header and parameter iterator

 -- Max Kellermann <mk@cm4all.com>  Mon, 27 Apr 2015 11:18:07 -0000

libcm4all-was (0.6) unstable; urgency=low

  * debian: build with libcm4all-apreq2

 -- Max Kellermann <mk@cm4all.com>  Mon, 19 Jan 2015 17:38:05 -0000

libcm4all-was (0.5) unstable; urgency=low

  * apreq: add option UPLOAD_BUFFER_SIZE
  * headers are now C++ compatible

 -- Max Kellermann <mk@cm4all.com>  Mon, 19 Jan 2015 11:53:59 -0000

libcm4all-was (0.4) unstable; urgency=low

  * apreq: compile and link with libapr and libapr-util
  * build with libapreq 2.13

 -- Max Kellermann <mk@cm4all.com>  Mon, 10 Mar 2014 16:15:45 -0000

libcm4all-was (0.3) unstable; urgency=low

  * simple: reuse connection after discarding request body
  * simple: handle WAS_COMMAND_PREMATURE
  * simple: implement was_simple_input_close()
  * protocol: documentation

 -- Max Kellermann <mk@cm4all.com>  Sat, 07 Dec 2013 07:55:57 -0000

libcm4all-was (0.2) unstable; urgency=low

  * simple: flush the control buffer in _end()